# minimint

./: Cargo.toml  README.html  Workshop.md  ci.nix  flake.nix
.github/workflows/: ci-nix.yml  docs.yml
client/client-lib/: Cargo.toml
client/client-lib/src/: lib.rs
crypto/tbs/: Cargo.toml
crypto/tbs/src/: lib.rs  poly.rs
devimint/src/: federation.rs  main.rs  util.rs
fedimint/: Cargo.toml
fedimint-api/: Cargo.toml
fedimint-api-client/src/: lib.rs
fedimint-api-client/src/api/: mod.rs  (+2 more)
fedimint-api/src/: config.rs  lib.rs
fedimint-bin-tests/src/: main.rs
fedimint-cli/src/: client.rs  lib.rs
fedimint-client-legacy/src/: lib.rs
fedimint-client/src/: db.rs  lib.rs  oplog.rs
fedimint-core/: Cargo.toml
fedimint-core/src/: amount.rs  api.rs  config.rs  envs.rs  lib.rs  task.rs  transaction.rs
fedimint-load-test-tool/src/: common.rs  main.rs
fedimint-recurringd/: Cargo.toml
fedimint-recurringd/src/: db.rs  lib.rs  main.rs
fedimint-rocksdb/src/: lib.rs
fedimint-testing/src/: federation.rs  lib.rs
fedimint-wasm-tests/src/: lib.rs
fedimint/src/: config.rs  lib.rs
fedimint_server/encoding/: trait.Decodable.html  trait.Encodable.html
fedimintd/: Cargo.toml
fedimintd/src/: fedimintd.rs
integrationtests/: Cargo.toml
integrationtests/tests/: tests.rs
ln-gateway/src/: main.rs
mint-client/src/: api.rs  lib.rs
modules/fedimint-dummy/: Cargo.toml
modules/fedimint-ln/: Cargo.toml
modules/fedimint-ln-tests/: Cargo.toml
modules/fedimint-mint/: Cargo.toml
modules/fedimint-mint-tests/: Cargo.toml
recoverytool/src/: main.rs
(+88 files in other folders)
